# sudoku-rl

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  mask.py  sample.py  split.py  utils.py
data/examples/: radcliffe_10.jsonl
docs/ideas/: finetuning-strategies.md
scripts/: README.md  benchmark_qwen.sh  benchmark_qwen_sft.sh  eval_gpt5_5.py  eval_qwen.py  train_qwen_grpo.py  train_qwen_grpo_curriculum.py  train_qwen_sft.py
sudoku_rl/: qwen.py  utils.py
sudoku_rl/eval/: evaluate.py
sudoku_rl/methods/: grpo.py  sft.py
sudoku_rl/models/: peft.py  qwen.py
sudoku_rl/tasks/: rewards.py  sudoku.py
tests/: test_data_mask.py  test_data_sample.py  test_data_split.py  test_data_utils.py  test_eval_gpt5_5.py  test_eval_qwen.py  test_qwen.py  test_train_qwen_grpo.py  test_train_qwen_grpo_curriculum.py  test_train_qwen_sft.py  test_utils.py
