[project]
name = "sudoku-rl"
version = "0.1.0"
description = "RL and fine-tuning experiments for small LLMs playing Sudoku."
requires-python = ">=3.11"
dependencies = [
    "kaggle>=2.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.13.0",
]
gpu = [
    "accelerate>=1.0",
    "datasets>=2.20",
    "peft>=0.12",
    "torch>=2.3",
    "transformers>=4.51.0",
    "trl>=0.24",
]

[tool.uv]
package = false

[tool.ruff.lint]
ignore = ["E701"]  # allow lean one-line conditionals (if cond: return)

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["gpu: needs torch/transformers (gpu group)"]
